--- a/src/public/index.html
+++ b/src/public/index.html
@@ -25,7 +25,8 @@
     </div>
 
     <div class="container" style="margin-top:2rem;">
-        <h3 style="margin:2rem 0;" id="noProducts"> Lista de Productos:</h3>
+        <div id="noProducts"></div>
+        <h3 style="margin:2rem 0;" > Lista de Productos:</h3>
         <table class="table table-bordered border-dark" style="margin:3rem 0;">
             <thead class="thead-dark" style="background-color:aliceblue ;">
                 <tr>
